--- a/casino-dulacleamy.html
+++ b/casino-dulacleamy.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
-  <title>Reviews</title>
+  <title>Casino du Lac-Leamy</title>
 </head>
 
 <body>
@@ -22,12 +22,10 @@
       <div class="site-logo">
         <a href="index.html"><img src="images/header-logo.jpg" alt="site-logo"></a>
       </div>
-
       <nav class="site-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="top-casinos.html">Top casinos</a></li>
-          <li><a href="reviews.html" class="menu active">Reviews</a></li>
           <li><a href="about-us.html">About us</a></li>
           <li><a href="contact-us.html">Contact us</a></li>
           <li class="closed-menu">
@@ -40,24 +38,22 @@
         <div class="bar-2"></div>
         <div class="bar-3"></div>
       </div>
-
-
     </div>
   </header>
   <!-- site header end -->
 
-  <!-- site reviewsbanner start -->
-  <section class="reviews-section">
+  <!-- site-casinolacleamy-banner-start -->
+  <section class="casinolacleamy-banner">
     <div class="container">
       <div class="row">
         <div class="banner__text">
-          <h1>Reviews</h1>
+          <h1>Casino du Lac-Leamy</h1>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- site reviewsbanner end -->
+  <!-- site-casinolacleamy-banner-end -->
 
 
 
@@ -81,7 +77,6 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="top-casinos.html">Top casinos</a></li>
-              <li><a href="reviews.html">Reviews</a></li>
               <li><a href="about-us.html">About us</a></li>
               <li><a href="contact-us.html">Contact us</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
