--- a/top-casinos.html
+++ b/top-casinos.html
@@ -27,7 +27,6 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="top-casinos.html" class="menu active">Top casinos</a></li>
-                    <li><a href="reviews.html">Reviews</a></li>
                     <li><a href="about-us.html">About us</a></li>
                     <li><a href="contact-us.html">Contact us</a></li>
                     <li class="closed-menu">
@@ -89,7 +88,7 @@
                             <a href="https://www.caesars.com/caesars-windsor" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
-                            <a href="reviews.html" target="_blank">Review</a>
+                            <a href="caesars-windsor.html" target="_blank">Review</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +108,7 @@
                             <a href="https://www.caesars.com/caesars-windsor" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
-                            <a href="reviews.html" target="_blank">Review</a>
+                            <a href="casino-niagara.html" target="_blank">Review</a>
                         </div>
                     </div>
                 </div>
@@ -129,7 +128,7 @@
                             <a href="https://casinoniagara.com" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
-                            <a href="reviews.html" target="_blank">Review</a>
+                            <a href="casinode-monttremblant.html" target="_blank">Review</a>
                         </div>
                     </div>
                 </div>
@@ -141,23 +140,15 @@
                                 class="img-fluid" alt="topcasinocard4.jpg"></a>
                     </div>
                     <div class="restaurent-text">
-                        <h4>Casino
-                            Rama
-                            Resort</h4>
-                        <p>Orillia,
-                            Ontario:
-                            5899
-                            Rama Rd,
-                            Orillia, ON
-                            L3V 6H6,
-                            Canada</p>
+                        <h4>Casino Rama Resort</h4>
+                        <p>Orillia, Ontario:5899 Rama Rd, Orillia, ON L3V 6H6,Canada</p>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
                             <a href="https://www.casinorama.com" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
-                            <a href="reviews.html" target="_blank">Review</a>
+                            <a href="casino-ramaresort.html" target="_blank">Review</a>
                         </div>
                     </div>
                 </div>
@@ -186,7 +177,7 @@
                             <a href="https://riverrock.com/vancouver-casino-resort/" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
-                            <a href="reviews.html" target="_blank">Review</a>
+                            <a href="riverock-casino.html" target="_blank">Review</a>
                         </div>
                     </div>
                 </div>
@@ -217,7 +208,7 @@
                         e" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
-                            <a href="reviews.html" target="_blank">Review</a>
+                            <a href="casino-dulacleamy.html" target="_blank">Review</a>
                         </div>
                     </div>
                 </div>
@@ -248,7 +239,7 @@
                             <a href="https://fallsviewcasinoresort.com" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
-                            <a href="reviews.html" target="_blank">Review</a>
+                            <a href="fallsview-casino.html" target="_blank">Review</a>
                         </div>
                     </div>
                 </div>
@@ -281,7 +272,7 @@
                             <a href="https://www.hardrockcasinovancouver.com" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
-                            <a href="reviews.html" target="_blank">Review</a>
+                            <a href="hard-rock.html" target="_blank">Review</a>
                         </div>
                     </div>
                 </div>
@@ -391,7 +382,6 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="top-casinos.html">Top casinos</a></li>
-                            <li><a href="reviews.html">Reviews</a></li>
                             <li><a href="about-us.html">About us</a></li>
                             <li><a href="contact-us.html">Contact us</a></li>
                             <li><a href="privacy-policy.html">Privacy Policy</a></li>
