--- a/casinode-monttremblant.html
+++ b/casinode-monttremblant.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
-  <title>Contact us</title>
+  <title>Casino de Mont-Tremblant</title>
 </head>
 
 <body>
@@ -22,13 +22,12 @@
       <div class="site-logo">
         <a href="index.html"><img src="images/header-logo.jpg" alt="site-logo"></a>
       </div>
-
       <nav class="site-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="top-casinos.html">Top casinos</a></li>
           <li><a href="about-us.html">About us</a></li>
-          <li><a href="contact-us.html" class="menu active">Contact us</a></li>
+          <li><a href="contact-us.html">Contact us</a></li>
           <li class="closed-menu">
             <a href="#">×</a>
           </li>
@@ -45,63 +44,20 @@
   </header>
   <!-- site header end -->
 
-  <!-- site contactbanner start -->
-  <section class="contact-section">
+  <!-- site-Monttremblantbanner-start -->
+  <section class="Monttremblantbanner">
     <div class="container">
       <div class="row">
         <div class="banner__text">
-          <h1>Contact us</h1>
+          <h1>Casino de Mont-Tremblant</h1>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- site contactbanner end -->
-
-   <!-- site contactform start -->
-   <section class="contact__main">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <div class="about_us_content">
-                    <form action="..">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="name">Name</label>
-                                    <input type="text" id="name" class="input-control">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="email">Email</label>
-                                    <input type="email" id="email" class="input-control">
-                                </div>
-                            </div>
-
-                        </div>
+  <!-- site-Monttremblantbanner-end -->
 
 
-                        <div class="form-group">
-                            <label for="phone">Your phone:</label>
-                            <input type="text" id="phone" class="input-control">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea name="Message" id="message" cols="20" rows="8" class="input-control"></textarea>
-                        </div>
-
-                        <div class="form-group text-center">
-                            <button class="submit-btn">submit</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- site contactform end -->
 
   <!-- site footer start -->
   <div class="footer">
