--- a/caesars-windsor.html
+++ b/caesars-windsor.html
@@ -57,7 +57,68 @@
 
   <!-- site-windsorbanner-end -->
 
-
+  <!-- site-casinodetail-start -->
+  <div class="casinodetail">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="casinodetail-text">
+            <h3>Caesars Windsor Hotel & Casino: A Premier Entertainment Destination</h3>
+            <p>Situated in the heart of Windsor, Ontario, Caesars Windsor Hotel &amp; Casino is a top-tier
+              entertainment and gaming destination that promises an unforgettable experience for
+              visitors from Canada and beyond.</p>
+            <h3>Gaming Experience:</h3>
+            <p>Caesars Windsor offers a world-class gaming experience that caters to
+              a diverse range of preferences. The spacious and stylish casino floor features an extensive
+              selection of slots, table games, and poker rooms. Whether you&#39;re a seasoned gambler or a
+              novice, you&#39;ll find a game that suits your taste. The casino staff is friendly and helpful,
+              making it an inviting place to test your luck.</p>
+            <h3>Luxurious Accommodations:</h3>
+            <p>The hotel at Caesars Windsor is a true gem. The rooms are
+              modern, elegantly designed, and equipped with all the amenities you&#39;d expect from a high-
+              end hotel. Many rooms offer breathtaking views of the Detroit skyline or the Detroit River.
+              The comfortable beds and well-appointed</p>
+            <h3>Dining Options:</h3>
+            <p>Food lovers will be spoiled for choice at Caesars Windsor. The resort boasts
+              several excellent dining options, from casual to fine dining. Neros Steakhouse is a must-visit
+              for a premium steak experience, while Market Buffet offers an array of international
+              cuisines. Don&#39;t forget to check out Artist Café for a quick coffee or light bite.</p>
+            <h3>Entertainment and Shows:</h3>
+            <p>Caesars Windsor consistently hosts top-notch live entertainment
+              and shows. From concerts to comedy acts, there&#39;s always something exciting happening
+              here. Be sure to check the event schedule during your visit; you might catch a show
+              featuring a renowned artist or comedian.</p>
+            <h3>Relaxation and Spa:</h3>
+            <p>For those seeking relaxation and rejuvenation, the spa at Caesars
+              Windsor is a sanctuary. It offers a wide range of spa treatments, including massages and
+              facials, allowing you to unwind and pamper yourself during your stay.</p>
+            <h3>Shopping and Amenities:</h3>
+            <p>The resort provides a variety of shops where you can pick up
+              souvenirs, jewelry, or fashion items. The amenities also include a fitness center and a
+              beautiful indoor pool, perfect for a refreshing dip.</p>
+            <h3>Location:</h3>
+            <p>One of the highlights of Caesars Windsor is its prime location on the riverfront,
+              with stunning views of the Detroit skyline. Being just steps away from the U.S.-Canada
+              border means you can explore both sides easily. The nearby city of Detroit offers additional
+              entertainment and dining options, making this a great destination for a cross-border
+              adventure.</p>
+            <h3>Conclusion:</h3>
+            <p>Caesars Windsor Hotel &amp; Casino is an exceptional destination for visitors from
+              Canada, offering an extraordinary blend of gaming, entertainment, luxury, and relaxation.
+              Whether you&#39;re looking to try your luck at the casino, enjoy a world-class dining experience,
+              or unwind in style, this resort has it all. The attentive staff and picturesque location make it
+              a must-visit destination for those seeking a memorable and opulent getaway. Just
+              remember to check the latest information, as offerings and availability may change over
+              time. Enjoy your stay at Caesars Windsor!</p>
+          </div>
+          <div class="resturent-button new">
+            <a href="https://www.caesars.com/caesars-windsor" target="_blank">Visit</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- site-casinodetail-end -->
 
   <!-- site footer start -->
   <div class="footer">
