--- a/casino-dulacleamy.html
+++ b/casino-dulacleamy.html
@@ -55,7 +55,65 @@
 
   <!-- site-casinolacleamy-banner-end -->
 
-
+  <!-- site-casinodetail-start -->
+  <div class="casinodetail">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="casinodetail-text">
+            <h3>An Elegant Gaming Retreat in Gatineau, Quebec</h3>
+            <p>Nestled along the serene Lac Leamy in Gatineau, Quebec, Casino du Lac-Leamy is a
+              captivating destination that marries gaming excitement, refined accommodations, and top-
+              tier entertainment. For visitors from Canada and beyond, seeking a blend of entertainment,
+              luxury, and relaxation, this casino resort is an ideal choice.</p>
+            <h3>Gaming Experience:</h3>
+            <p>Casino du Lac-Leamy offers a diverse and thrilling gaming experience. The expansive casino
+              floor features a wide array of slot machines, table games, and a dedicated poker room.
+              Whether you&#39;re a novice or an experienced player, there&#39;s a game to match your
+              preferences. The friendly and professional staff ensures a welcoming and enjoyable
+              atmosphere.</p>
+            <h3>Luxurious Accommodations:</h3>
+            <p>TThe Hilton Lac-Leamy, adjacent to the casino, provides a haven of luxury. The hotel rooms
+              are stylishly furnished, offering comfortable beds and modern amenities. Many rooms boast
+              scenic views of the lake, further enhancing your stay.</p>
+            <h3>Culinary Excellence:</h3>
+            <p>Dining at Casino du Lac-Leamy is a highlight of the experience. Le Baccara, a five-diamond
+              restaurant, offers an unparalleled gourmet experience with a menu designed to impress the
+              most discerning palates. For a more relaxed atmosphere, Arome Seafood and Grill serves up
+              mouthwatering seafood and steaks.</p>
+            <h3>Entertainment and Shows:</h3>
+            <p>The resort consistently hosts top-notch live entertainment, from concerts and comedy acts
+              to cultural performances. The Théâtre du Casino provides an intimate setting for captivating
+              shows. Check the event schedule to see if there&#39;s a performance that aligns with your visit.</p>
+            <h3>Spa and Relaxation:</h3>
+            <p>Pamper yourself at the Amerispa located within the Hilton Lac-Leamy. The spa offers a
+              range of treatments, including massages and facials, providing a soothing escape from the
+              hustle and bustle of the casino floor.</p>
+            <h3>Shopping and Amenities:</h3>
+            <p>The resort features a selection of shops where you can find elegant souvenirs, fashion items,
+              and more. Other amenities include an outdoor pool, fitness center, and a marina, offering
+              recreational opportunities on Lac Leamy.</p>
+            <h3>Scenic Location:</h3>
+            <p>Casino du Lac-Leamy&#39;s location along Lac Leamy is simply enchanting, with serene lake views
+              and a tranquil ambiance. The resort&#39;s proximity to Ottawa, the Canadian capital, makes it an
+              ideal spot for exploration and relaxation.</p>
+            <h3>Conclusion:</h3>
+            <p>Casino du Lac-Leamy is an extraordinary destination for visitors from Canada, offering a
+              harmonious blend of gaming, entertainment, luxury, and relaxation. Whether you&#39;re aiming
+              to test your luck at the casino, indulge in a gourmet meal, or immerse yourself in a
+              captivating show, this resort offers it all. The attentive staff, elegant surroundings, and
+              picturesque setting make it a must-visit choice for those in search of a refined and
+              memorable escape. Always check for the latest information and updates, as offerings and
+              events may evolve over time. Enjoy your stay at Casino du Lac-Leamy!</p>
+          </div>
+          <div class="resturent-button new">
+            <a href="https://casinos.lotoquebec.com/en/lacleamy/home" target="_blank">Visit</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- site-casinodetail-end -->
 
   <!-- site footer start -->
   <div class="footer">
