--- a/casino-dulacleamy.html
+++ b/casino-dulacleamy.html
@@ -73,7 +73,7 @@
               preferences. The friendly and professional staff ensures a welcoming and enjoyable
               atmosphere.</p>
             <h3>Luxurious Accommodations:</h3>
-            <p>TThe Hilton Lac-Leamy, adjacent to the casino, provides a haven of luxury. The hotel rooms
+            <p>The Hilton Lac-Leamy, adjacent to the casino, provides a haven of luxury. The hotel rooms
               are stylishly furnished, offering comfortable beds and modern amenities. Many rooms boast
               scenic views of the lake, further enhancing your stay.</p>
             <h3>Culinary Excellence:</h3>
