--- a/casino-niagara.html
+++ b/casino-niagara.html
@@ -57,6 +57,63 @@
 
   <!-- site-niagarabanner-end -->
 
+    <!-- site-casinodetail-start -->
+    <div class="casinodetail">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="casinodetail-text">
+              <h3>Casino Niagara: A Thrilling Gaming and Entertainment Hub</h3>
+              <p>Casino Niagara, located in the heart of Niagara Falls, Ontario, is a bustling and vibrant
+                destination that promises an exciting experience for visitors from Canada and beyond.</p>
+              <h3>Gaming Experience:</h3>
+              <p>Casino Niagara offers a diverse array of gaming options, making it a prime attraction for
+                both seasoned gamblers and newcomers. The spacious casino floor is home to a wide
+                selection of slot machines, table games, and a dedicated poker room. The friendly and
+                knowledgeable staff ensures a welcoming atmosphere for all visitors, whether you&#39;re
+                playing the slots or testing your skills at the tables.</p>
+              <h3>Variety of Dining Options:</h3>
+              <p>Casino Niagara doesn&#39;t just cater to gaming enthusiasts; it also offers a delightful culinary
+                experience. You can explore a variety of dining options, including the Market Buffet for an
+                extensive selection of international dishes, or the Perks Café for a quick bite and a coffee.
+                For a more upscale dining experience, visit the Fallsview Dining Room and enjoy your meal
+                with a view of the casino floor.</p>
+              <h3>Entertainment and Shows:</h3>
+              <p>The resort frequently hosts live entertainment and shows, adding another layer of
+                excitement to your visit. Check the event schedule to see if there&#39;s a concert, comedy act, or
+                other performances happening during your stay. These shows are a fantastic way to unwind
+                after a day of gaming.</p>
+              <h3>Location and Views:</h3>
+              <p>One of the standout features of Casino Niagara is its proximity to the world-famous Niagara
+                Falls. The stunning natural wonder is just a short walk away, and the resort offers
+                picturesque views of the falls and the surrounding area. The casino&#39;s location on Clifton Hill
+                ensures that you have easy access to many other attractions, including restaurants,
+                museums, and souvenir shops.</p>
+              <h3>Customer Service:</h3>
+              <p>The staff at Casino Niagara is known for their friendly and attentive service. Whether you
+                have questions about the games, need assistance with directions, or require any other help,
+                the team is always ready to provide top-notch customer service.</p>
+              <h3>Additional Amenities:</h3>
+              <p>In addition to gaming and entertainment, Casino Niagara offers other amenities like a sports
+                bar for those looking to catch a game, and a nightclub for late-night fun. The resort also has
+                a dedicated poker room for enthusiasts of the game.</p>
+              <h3>Conclusion:</h3>
+              <p>Casino Niagara is a dynamic and entertaining destination for visitors from Canada, offering a
+                thrilling blend of gaming, dining, and live entertainment. The breathtaking backdrop of
+                Niagara Falls adds to the allure of this resort, making it an ideal spot for a memorable
+                getaway. Whether you&#39;re looking for a night of gaming, a delicious meal, or a live show,
+                Casino Niagara has it all. Please check for the latest information and updates, as offerings
+                and events may change over time. Enjoy your visit to Casino Niagara!</p>
+            </div>
+            <div class="resturent-button new">
+              <a href="https://casinoniagara.com" target="_blank">Visit</a>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- site-casinodetail-end -->
+
   <!-- site footer start -->
   <div class="footer">
     <div class="container">
