--- a/casino-ramaresort.html
+++ b/casino-ramaresort.html
@@ -57,6 +57,68 @@
 
   <!-- site-casinoramabanner-end -->
 
+      <!-- site-casinodetail-start -->
+      <div class="casinodetail">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="casinodetail-text">
+                <h3>Casino Rama Resort: A Premier Entertainment Destination in Ontario</h3>
+                <p>Casino Rama Resort, located in Orillia, Ontario, is a renowned gaming and entertainment
+                  destination that promises an exciting and diverse experience for visitors from Canada and
+                  beyond.</p>
+                <h3>Gaming Experience:</h3>
+                <p>Casino Rama offers a comprehensive gaming experience that caters to a wide range of
+                  preferences. The spacious casino floor is home to thousands of slot machines, an array of
+                  table games, and a dedicated poker room. Whether you&#39;re a casual player or a seasoned
+                  gambler, you&#39;ll find a game that suits your style. The professional and friendly staff ensures
+                  an inviting atmosphere for everyone.</p>
+                <h3>Luxurious Accommodations:</h3>
+                <p>The resort&#39;s hotel provides elegant and well-appointed rooms designed for comfort and
+                  relaxation. Whether you choose a standard room or a luxurious suite, you&#39;ll enjoy modern
+                  amenities and a serene environment that&#39;s perfect for unwinding after a day of gaming and
+                  entertainment.</p>
+                <h3>Dining Options:</h3>
+                <p>TFood enthusiasts will delight in the diverse dining options at Casino Rama. From casual
+                  eateries to upscale restaurants, there&#39;s something to satisfy every palate. The Weirs
+                  Restaurant offers a superb dining experience, while the Simcoe Yard House serves up
+                  delicious pub fare. Don&#39;t forget to explore the various options at the food court for a quick
+                  and satisfying meal.</p>
+                <h3>Entertainment and Shows:</h3>
+                <p>Casino Rama consistently hosts top-tier live entertainment and shows. The entertainment
+                  center features renowned artists, comedians, and musicians. Check the event schedule to
+                  see if there&#39;s a performance happening during your visit, as these shows provide an
+                  excellent way to unwind and enjoy a memorable evening.</p>
+                <h3>Relaxation and Spa:</h3>
+                <p>TFor those seeking relaxation and pampering, the Balance in Life Spa at Casino Rama is a
+                  sanctuary. It offers a wide range of spa treatments, including massages and facials, allowing
+                  you to indulge in tranquility and rejuvenation.</p>
+                <h3>Shopping and Amenities:</h3>
+                <p>The resort also features a range of shops where you can find souvenirs, fashion items, and
+                  more. Other amenities include a fitness center and a beautiful indoor pool, perfect for a
+                  refreshing swim.</p>
+                <h3>Location:</h3>
+                <p>Situated in the picturesque area of Lake Simcoe, Casino Rama Resort provides a tranquil and
+                  scenic backdrop for your getaway. The surrounding natural beauty offers opportunities for
+                  outdoor exploration, including hiking, boating, and golfing.</p>
+                  <h3>Conclusion:</h3>
+                  <p>Casino Rama Resort is a premier destination for visitors from Canada, offering a dynamic
+                    blend of gaming, entertainment, luxury, and relaxation. Whether you&#39;re looking to test your
+                    luck at the casino, enjoy a delectable meal, or savor a live show, this resort has it all. The
+                    attentive staff and beautiful location make it a must-visit spot for those seeking an
+                    exceptional and unforgettable experience. Please remember to check for the latest
+                    information and updates, as offerings and events may change over time. Enjoy your stay at
+                    Casino Rama Resort!</p>
+              </div>
+              <div class="resturent-button new">
+                <a href="https://www.casinorama.com" target="_blank">Visit</a>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- site-casinodetail-end -->
+
   <!-- site footer start -->
   <div class="footer">
     <div class="container">
