--- a/about-us.html
+++ b/about-us.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="item"><img src="images/topicon2.png" alt="topicon2">
-                        <h5>TUnbiased Reviews:</h5>
+                        <h5>Unbiased Reviews:</h5>
                         <p>We maintain the highest standards of objectivity and fairness in our
                             reviews, ensuring that you get a balanced view of each casino resort.</p>
                         <div class="shape"> <span class="flaticon-hamburger-1"></span> </div>
