--- a/top-casinos.html
+++ b/top-casinos.html
@@ -198,8 +198,7 @@
             <div class="row restaurant">
                 <div class="main-img-text-content">
                     <div class="restaurant-img">
-                        <a href="https://casinos.lotoquebec.com/en/lacleamy/hom
-                        e" target="_blank">
+                        <a href="https://casinos.lotoquebec.com/en/lacleamy/home" target="_blank">
                             <img src="images/topcasinocard6.jpg" class="img-fluid" alt="topcasinocard6"></a>
                     </div>
                     <div class="restaurent-text">
@@ -217,8 +216,7 @@
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
-                            <a href="https://casinos.lotoquebec.com/en/lacleamy/hom
-                        e" target="_blank">Visit</a>
+                            <a href="https://casinos.lotoquebec.com/en/lacleamy/home" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
                             <a href="casino-dulacleamy.html" target="_blank">Review</a>
