--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -92,7 +92,7 @@
         <p>Unless otherwise stated, gigacasinos.com and/or its licensors own the intellectual property
           rights for all material on gigacasinos.com. All intellectual property rights are reserved. You
           may access this from gigacasinos.com for your own personal use subjected to restrictions
-          set in these terms and conditions.</h4>
+          set in these terms and conditions.</p>
         <p>You must not:</p>
         <ul>
           <li>Republish material from gigacasinos.com</li>
@@ -119,6 +119,7 @@
             consents to do so;</li>
           <li>The Comments do not invade any intellectual property right, including without limitation
             copyright, patent or trademark of any third party;</li>
+          </ul>
           <p>The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise
             unlawful material which is an invasion of privacy</p>
           <p>The Comments will not be used to solicit or promote business or custom or present
@@ -126,7 +127,6 @@
           <p>You hereby grant gigacasinos.com a non-exclusive license to use, reproduce, edit and
             authorize others to use, reproduce and edit any of your Comments in any and all forms,
             formats or media.</p>
-        </ul>
         <h4>Hyperlinking to our Content</h4>
         <p>The following organizations may link to our Website without prior written approval:</p>
         <ul>
