--- a/top-casinos.html
+++ b/top-casinos.html
@@ -95,6 +95,13 @@
                     <div class="restaurent-text">
                         <h4>Caesars Windsor Hotel & Casino</h4>
                         <p>Windsor, Ontario: 377 Riverside Dr E, Windsor, ON N9A 7H7, Canada</p>
+                        <div class="main-rate-star">
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                        </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
@@ -115,7 +122,15 @@
                     <div class="restaurent-text">
                         <h4>Casino Niagara</h4>
                         <p>Niagara Falls,Ontario: 5705 Falls Ave, Niagara Falls, ON L2E 6T3, Canada</p>
+                        <div class="main-rate-star">
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                        </div>
                     </div>
+                    
                     <div class="reviewflex">
                         <div class="resturent-button">
                             <a href="https://www.caesars.com/caesars-windsor" target="_blank">Visit</a>
@@ -135,6 +150,12 @@
                     <div class="restaurent-text">
                         <h4>Casino de Mont-Tremblant</h4>
                         <p>Mont-Tremblant,Quebec: 300 Chemin des Pléiades, Mont- Tremblant,QC J8E 0A7,Canada</p>
+                        <div class="main-rate-star">
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                        </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
@@ -155,6 +176,12 @@
                     <div class="restaurent-text">
                         <h4>Casino Rama Resort</h4>
                         <p>Orillia, Ontario:5899 Rama Rd, Orillia, ON L3V 6H6,Canada</p>
+                        <div class="main-rate-star">
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                        </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
@@ -184,6 +211,12 @@
                             BC V6X
                             3P8,
                             Canada</p>
+                            <div class="main-rate-star">
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
@@ -213,6 +246,12 @@
                             QC J8Y
                             6W3,
                             Canada</p>
+                            <div class="main-rate-star">
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
@@ -244,6 +283,12 @@
                             Falls, ON
                             L2G 7X5,
                             Canada</p>
+                            <div class="main-rate-star">
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
@@ -277,6 +322,12 @@
                             , BC V3K
                             6W3,
                             Canada</p>
+                            <div class="main-rate-star">
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
