--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="banner__text">
-          <h1>gigacasinos</h1>
+          <h1>GIGACASINOS</h1>
         </div>
       </div>
     </div>
